[project]
name = "sensorwatch"
version = "0.1.0"
description = "Lightweight hardware sensor monitor for Windows — reads HWiNFO64 shared memory and logs JSON Lines"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Leonard Janke" }]
keywords = ["hwinfo", "hardware-monitoring", "sensors", "psu", "telemetry", "windows"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pendulum>=3.0",
]

[project.urls]
Homepage = "https://github.com/lcjanke2020/sensorwatch"
Repository = "https://github.com/lcjanke2020/sensorwatch"
Issues = "https://github.com/lcjanke2020/sensorwatch/issues"

[project.scripts]
sensorwatch = "sensorwatch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Dev-only tooling (PEP 735). Installed by `uv sync`; kept out of
# [project].dependencies so the runtime footprint stays just `pendulum`.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "twine>=5.0",
]

# Trim the sdist to source + metadata. The heavy worked-example artifacts
# (charts and captured datasets) stay browsable on GitHub but are excluded from
# the published tarball to keep it small. The wheel already ships only the
# sensorwatch/ package.
[tool.hatch.build.targets.sdist]
exclude = [
    "examples/**/*.png",
    "examples/**/*.parquet",
    "examples/**/*.jsonl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
