[workspace]
resolver = "2"
members = ["sensorwatch-sys", "sensorwatch", "sensorwatch-cli"]

# Shared metadata for the workspace members. Both library crates (sensorwatch-sys and
# sensorwatch) are published to crates.io (name reservation, OIDC trusted publishing,
# and the two-crate ordered publish landed in LEO-326); these fields feed that release.
# sensorwatch-cli stays repo-only (publish = false).
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lcjanke2020/sensorwatch"
authors = ["Leonard Janke"]
# bindgen emits `unsafe extern "C"` blocks (stabilized in Rust 1.82), so that is
# the effective floor for the -sys crate and hence the workspace.
rust-version = "1.82"
