[workspace]
resolver = "2"
members = ["sensorwatch-sys", "sensorwatch", "sensorwatch-cli"]

# Shared metadata for the workspace members. Both library crates (sensorwatch-sys and
# sensorwatch) are published to crates.io (name reservation, OIDC trusted publishing,
# and the two-crate ordered publish landed in LEO-326); these fields feed that release.
# sensorwatch-cli stays repo-only (publish = false).
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lcjanke2020/sensorwatch"
authors = ["Leonard Janke"]
# The floor is the parquet crate (59.x, an edition-2024 dependency tree, requires
# Rust 1.85) pulled in by the CLI's `export` subcommand (LEO-349). Before that the
# floor was 1.82 for bindgen's `unsafe extern "C"` blocks, which is no longer the
# binding constraint.
rust-version = "1.85"
